[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/FatherSprite.png" type="Texture" id=1]
[ext_resource path="res://Objects/FatherObj.gd" type="Script" id=2]
[ext_resource path="res://Assets/FatherSpriteEnd.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FatherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FatherSpriteEnd:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]

[node name="FatherObj" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="FatherSprite" type="Sprite" parent="."]
scale = Vector2( 0.997059, 1 )
texture = ExtResource( 1 )
flip_h = true
hframes = 4
frame = 3

[node name="FatherAnim" type="AnimationPlayer" parent="."]
autoplay = "Animate"
anims/Animate = SubResource( 1 )

[node name="FatherCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1, 6 )
shape = SubResource( 2 )

[node name="FatherSpriteEnd" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
flip_h = true
hframes = 4
frame = 3
[connection signal="body_entered" from="." to="." method="_on_FatherObj_body_entered"]
